Improved install instructions